# zyrabit-SLM

./: .dockerignore  .env.example  .gitignore  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  DOCKER_DEBUG_GUIDE.md  Dockerfile  LICENSE  LOCAL_DEVELOPMENT.md  README.md  README_EN.md  SECURITY.md  TEMP_TASK_TRACKING.md  app.py  index.html  install.sh  llms-full.md  pyproject.toml  pyrightconfig.json  requirements.txt  secure_agent.py  setup_ollama.sh  setup_slm.sh  sitemap.xml  slm_console.py  test_failures.txt  zyra-up.sh
.gemini/: AGENTS.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: benchmark_report.yml
.github/workflows/: ci.yml  codeql.yml  deploy-docs.yml  release.yml  security-audit.yml  security.yml  validate-version.yml
assets/css/: styles.854ee8b9.css
assets/js/: 0058b4c6.75517c5c.js  0e384e19.4abba837.js  1128.3dca27a3.js  1206.7355243c.js  1262.03e74758.js  1316.a36df8bb.js  1588.ba3de20f.js  1783.887aab2d.js  17896441.31944949.js  1944.0067c1ff.js  2535.8fd70ba7.js  280.d2ca80ed.js  2919.4ba029c3.js  2948.08640898.js  32.cebfc43d.js  3241.ce70722d.js  338.d744dc84.js  3455.8888224d.js  365.656b9f8b.js  3715.5d940661.js  3807.af67a301.js  3956.9ee866cf.js  3b8c55ea.1c922ab7.js  4120.0184a15a.js  4179.59324ecf.js  4250.5693ffe2.js  4430.0153c26a.js  4568.f4099e44.js  4874b8fc.59ceff2a.js  4986.40496cb4.js  5146.39fb1fbd.js  5256.52340b5b.js  5291.31a60092.js  5384.5d43a25a.js  54f09226.6df26668.js  5672352c.772e3300.js  5838.390375e5.js  5e95c892.799205fe.js  61.e844e17e.js  6176.351bef33.js  (+36 more)
docs-portal/: Dockerfile  docusaurus.config.js  package.json  pnpm-lock.yaml  sidebars.js
docs-portal/docs/: api-reference.md  architecture-mermaid.md  compliance-report.md  core-v2.md  data-portability.md  erp-connection.md  first-rag.md  frontend-architecture.md  installation.md  integration-playbook.md  intro.md  models.md  production-hardening.md  telegram-bridge.md  zds-manifesto.md  zds-style-guide.md  zyrabit-architecture.mmd
docs-portal/src/: custom.css
mcp/: Dockerfile  README.md  config.json  install_server.py  mcp-tools-whitelist.yml  requirements.txt
scratch/: debug_import.py
scripts/: run_final_tests.sh  smoke_test.sh  update_changelog.sh
validation/: README.md  pr-checklist.md  report-template.md
zyrabit-brain-api/: .env.example  README.md  README_EN.md  docker-compose.local.yml  docker-compose.yml  example.env  ingest.py
zyrabit-slm/: README.md  README_EN.md  docker-compose.local.yml  docker-compose.monitoring.yml  docker-compose.yml  example.env
(+195 files in other folders)
