[project]
name = "zyrabit-slm"
version = "0.1.0"
description = "Sovereign SLM with RAG and secure bridge"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.4",
    "uvicorn>=0.35.0",
    "langchain-core>=1.3.2",
    "langchain-classic>=0.1.0",
    "langchain-community>=0.3.25",
    "langchain-text-splitters>=1.1.2",
    "langchain-ollama>=0.3.3",
    "langchain-chroma>=0.1.4",
    "chromadb>=0.5.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "python-dotenv>=1.2.2",
    "spacy>=3.7.0",
    "httpx>=0.27.2",
    "pymupdf>=1.24.10",
    "pymupdf4llm>=0.0.17",
    "rank-bm25>=0.2.2",
    "requests>=2.33.1",
    "python-multipart>=0.0.26",
    "python-socketio[asyncio]>=5.14.0",
    "python-engineio>=4.10.1",
    "markdown>=3.8.1",
    "fastmcp>=3.2.0",
    "docker>=7.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pip-audit>=2.8.0",
    "autopep8>=2.3.2",
]

[tool.uv]
managed = true
package = false

[tool.pytest.ini_options]
pythonpath = ["zyrabit-slm/api-rag"]
testpaths = ["zyrabit-slm/api-rag/tests"]
asyncio_mode = "auto"
addopts = "-ra -q"
