[project]
name = "zyrabit-slm"
version = "1.8.0"
description = "Sovereign SLM with RAG and secure bridge"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.8",
    "uvicorn>=0.35.0",
    "langchain>=1.2.0",
    "langchain-core>=1.3.0",
    "langchain-community>=0.4.0",
    "langchain-text-splitters>=1.1.2",
    "langchain-ollama>=0.4.0",
    "langchain-chroma>=0.3.0",
    "langchain-classic>=1.0.0",
    "chromadb>=1.3.5",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "python-dotenv>=1.2.2",
    "spacy>=3.8.7",
    "httpx>=0.27.2",
    "pymupdf>=1.25.5",
    "pymupdf4llm>=0.0.22",
    "rank-bm25>=0.2.2",
    "requests>=2.33.2",
    "urllib3>=2.7.0",
    "python-multipart>=0.0.20",
    "python-socketio[asyncio_client]>=5.14.0",
    "python-engineio>=4.11.0",
    "markdown>=3.8.1",
    "fastmcp>=3.2.0",
    "docker>=7.1.0",
    "psutil>=6.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pip-audit>=2.8.0",
    "autopep8>=2.3.2",
]

[tool.uv]
managed = true
package = false

[tool.pytest.ini_options]
pythonpath = ["zyrabit-slm/api-rag"]
testpaths = ["zyrabit-slm/api-rag/tests"]
asyncio_mode = "auto"
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap",
]
